--- a/views/sale_order_views.xml
+++ b/views/sale_order_views.xml
@@ -8,7 +8,7 @@
         <field name="arch" type="xml">
             <!-- Add horizontal subscription progress bar in sheet -->
             <xpath expr="//form[1]/sheet[1]/group[1]" position="before">
-                <div class="oe_title" style="margin-bottom: 20px;" invisible="not subscription_state">
+                <div class="oe_title" style="margin-bottom: 20px;">
                     <field name="subscription_state" invisible="1"/>
                     <field name="progress_stage" invisible="1"/>
                     <div style="margin-top: 15px; padding: 15px; background-color: #f5f5f5; border-radius: 5px;">
@@ -183,9 +183,6 @@
             </xpath>
             
             <!-- Add smart buttons for contracts -->
-            <xpath expr="//div[@name='button_box']" position="attributes">
-                <attribute name="invisible">is_subscription</attribute>
-            </xpath>
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button class="oe_stat_button" type="object" name="action_view_contracts"
                         icon="fa-briefcase" invisible="contract_count == 0">
@@ -206,9 +203,6 @@
             </xpath>
             <xpath expr="//form/header//button[@name='action_draft']" position="attributes">
                 <attribute name="invisible">True</attribute>
-            </xpath>
-            <xpath expr="//div[contains(@class,'oe_button_box')]" position="attributes">
-                <attribute name="invisible">1</attribute>
             </xpath>
 
             <xpath expr="//form/header" position="inside">
@@ -266,6 +260,21 @@
                     <field name="clause_ids"/>
                 </group>
                 </page>
+            </xpath>
+        </field>
+    </record>
+
+    <!-- Force-save/readonly partner and sale_line on project task form to keep linkage stable -->
+    <record id="project_task_force_save_partner_sale_line" model="ir.ui.view">
+        <field name="name">project.task.form.force.save.partner.sale.line</field>
+        <field name="model">project.task</field>
+        <field name="priority" eval="200"/>
+        <field name="inherit_id" ref="project.view_task_form2"/>
+        <field name="arch" type="xml">
+            <!-- Use broad selectors to avoid layout drift across versions -->
+            <xpath expr="//field[@name='partner_id']" position="attributes">
+                <attribute name="force_save">1</attribute>
+                <attribute name="readonly">True</attribute>
             </xpath>
         </field>
     </record>
