--- a/views/sale_order_views.xml
+++ b/views/sale_order_views.xml
@@ -219,9 +219,8 @@
                 <button string="Resend Contract" type="object" name="action_open_resend_contract_wizard"
                     class="btn-secondary" icon="fa-refresh"
                     invisible = "not can_resend_contract"/>
-                <button string="Change Payment Day" type="action" name="contract_management.action_change_payment_date_wizard"
-                    class="btn-secondary" icon="fa-calendar" invisible="not is_subscription"
-                    context="{'default_subscription_id': active_id}"/>
+                <button string="Change Payment Day" type="object" name="action_open_change_payment_day_wizard"
+                    class="btn-secondary" icon="fa-calendar" invisible="not is_subscription"/>
                 
                 <!-- Dynamic Next Action button - Commented out until FSM modules installed in test env
                 <button string="Create Install Task" type="object" name="action_next_step"
